fix: pagination color (increase contrast)

--- a/src/components/pagination/pagination.css
+++ b/src/components/pagination/pagination.css
@@ -16,7 +16,7 @@
   font-size: 24px;
   line-height: 24px;
   letter-spacing: 0.25px;
-  color: white;
+  color: #3f3f44;
   margin-right: 1rem;
   cursor: pointer;
 }
@@ -26,6 +26,6 @@
 }
 
 .page-active {
-  background: rgba(174, 195, 209, 0.2);
+  background: white;
   padding: 0.3rem;
 }
